--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build"
   },
   "dependencies": {
+    "@blocknote/core": "^0.15.0",
+    "@blocknote/react": "^0.15.0",
     "@convex-dev/auth": "^0.0.80",
+    "@uiw/react-md-editor": "^4.0.7",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-rewrite": "^4.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0"
   },
